# evm-bridge

./: .gitignore  README.md
client_side/: README.md  env_example  pyproject.toml  requirements.txt  send_tx_pos.py  send_tx_pow.py
contract/: hardhat.config.js  package-lock.json
contract/contracts/: CombinedBridge.sol
contract/ignition/modules/: CombinedBridge_to_pos.js  CombinedBridge_to_pow.js
frontend/: app.py  requirements.txt
frontend/static/js/: script.js
frontend/templates/: index.html
oracle/: env_example  listener.py  log_decoder.py  logger.py  pyproject.toml  requirements.txt
systemctl/: oracle.service
